{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 282,
  "lineage": "d359b483-cce9-3d02-4f56-e406d12faa55",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-087bb7cd80951edb7",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-087bb7cd80951edb7",
            "ingress": [],
            "name": "main-cluster-sg",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-cluster-sg"
            },
            "tags_all": {
              "Name": "main-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-05f4f66dceaa4bf50",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f4f66dceaa4bf50",
            "ingress": [],
            "name": "main-node-sg",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-node-sg",
              "kubernetes.io/cluster/main": "owned"
            },
            "tags_all": {
              "Name": "main-node-sg",
              "kubernetes.io/cluster/main": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2003023321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087bb7cd80951edb7",
            "security_group_rule_id": "sgr-03baf49592c3a336e",
            "self": false,
            "source_security_group_id": "sg-05f4f66dceaa4bf50",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-1781438350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087bb7cd80951edb7",
            "security_group_rule_id": "sgr-050bb3cc9874dea8f",
            "self": false,
            "source_security_group_id": "sg-05f4f66dceaa4bf50",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1506135913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05f4f66dceaa4bf50",
            "security_group_rule_id": "sgr-01c6ca965da6d84c0",
            "self": false,
            "source_security_group_id": "sg-05f4f66dceaa4bf50",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3363049092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05f4f66dceaa4bf50",
            "security_group_rule_id": "sgr-09dc536e4a4ecd94a",
            "self": false,
            "source_security_group_id": "sg-087bb7cd80951edb7",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00aa502465e7e44be",
            "domain": "vpc",
            "id": "eipalloc-00aa502465e7e44be",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-35-158-198-156.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.198.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:internet-gateway/igw-0e0f6843a616873d5",
            "id": "igw-0e0f6843a616873d5",
            "owner_id": "839821061981",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            },
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00aa502465e7e44be",
            "connectivity_type": "public",
            "id": "nat-02a77c53c3f33aa2d",
            "network_interface_id": "eni-06777911031881ae7",
            "private_ip": "10.0.2.68",
            "public_ip": "35.158.198.156",
            "subnet_id": "subnet-04723ed1bc98cde1a",
            "tags": {
              "Name": "NAT Gateway for Custom Kubernetes Cluster"
            },
            "tags_all": {
              "Name": "NAT Gateway for Custom Kubernetes Cluster"
            }
          },
          "dependencies": [
            "module.vpc_for_eks.aws_eip.main",
            "module.vpc_for_eks.aws_subnet.public_subnet",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018e97079c1c7d91c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02a77c53c3f33aa2d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018e97079c1c7d91c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_eip.main",
            "module.vpc_for_eks.aws_nat_gateway.main",
            "module.vpc_for_eks.aws_subnet.public_subnet",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:route-table/rtb-0fb68438bff19f9b3",
            "id": "rtb-0fb68438bff19f9b3",
            "owner_id": "839821061981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0f6843a616873d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_internet_gateway.igw",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f19a46a7723fa05",
            "route_table_id": "rtb-0fb68438bff19f9b3",
            "subnet_id": "subnet-04723ed1bc98cde1a"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_internet_gateway.igw",
            "module.vpc_for_eks.aws_route_table.main",
            "module.vpc_for_eks.aws_subnet.public_subnet",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e229309e030b85f1",
            "route_table_id": "rtb-0fb68438bff19f9b3",
            "subnet_id": "subnet-0a063fd2aacafbd2c"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_internet_gateway.igw",
            "module.vpc_for_eks.aws_route_table.main",
            "module.vpc_for_eks.aws_subnet.public_subnet",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-004fa8826e101487d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-004fa8826e101487d",
            "ingress": [],
            "name": "k8s-control-plane-sg",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-control-plane-sg"
            },
            "tags_all": {
              "Name": "k8s-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-066f1dc1aec5269c4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-066f1dc1aec5269c4",
            "ingress": [],
            "name": "k8s-data-plane-sg",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-data-plane-sg"
            },
            "tags_all": {
              "Name": "k8s-data-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-00b77ff606cf2b91a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b77ff606cf2b91a",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-880600212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-004fa8826e101487d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.control_plane_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4251689474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-004fa8826e101487d",
            "security_group_rule_id": "sgr-033f7a252b51de31c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.control_plane_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3332544904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-066f1dc1aec5269c4",
            "security_group_rule_id": "sgr-01f03e3798d5b6b31",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.data_plane_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1248409585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-066f1dc1aec5269c4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.data_plane_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1053844743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-066f1dc1aec5269c4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.data_plane_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1971562171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b77ff606cf2b91a",
            "security_group_rule_id": "sgr-04418680cd1098dd5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.public_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1768687005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b77ff606cf2b91a",
            "security_group_rule_id": "sgr-06a1152c39b07e15b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.public_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4247937367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b77ff606cf2b91a",
            "security_group_rule_id": "sgr-021d87549ecd0ce88",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_eks.aws_security_group.public_sg",
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-042307166cf58c6ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042307166cf58c6ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Custom Kubernetes cluster private subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Custom Kubernetes cluster private subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0ff84b7185f876a3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff84b7185f876a3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Custom Kubernetes cluster private subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Custom Kubernetes cluster private subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-04723ed1bc98cde1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04723ed1bc98cde1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Custom Kubernetes cluster public subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Custom Kubernetes cluster public subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0a063fd2aacafbd2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a063fd2aacafbd2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Custom Kubernetes cluster public subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Custom Kubernetes cluster public subnet",
              "kubernetes.io/cluster/main": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014feb4b0bd1dcd6f"
          },
          "dependencies": [
            "module.vpc_for_eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:vpc/vpc-014feb4b0bd1dcd6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aef5ed785e2f4b3d",
            "default_route_table_id": "rtb-018e97079c1c7d91c",
            "default_security_group_id": "sg-0f2d820714894c1c9",
            "dhcp_options_id": "dopt-0313a64657c4e833a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014feb4b0bd1dcd6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018e97079c1c7d91c",
            "owner_id": "839821061981",
            "tags": {
              "Name": "main-vpc",
              "Owner": "dvir.gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x",
              "kubernetes.io/cluster/main": "shared"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "dvir.gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x",
              "kubernetes.io/cluster/main": "shared"
            }
          }
        }
      ]
    }
  ]
}